# Engine

./: .gitignore  .gitmodules  Makefile
Application/: CMakeLists.txt  CanvaLayer.hpp  CanvaLyaer.cpp  Layer2D.cpp  Layer2D.hpp  Makefile  main.cpp  temp.glsl
Application/assets/models/: Axe.fbx
Application/assets/shaders/: Layer2D.glsl  Quad.glsl  Scene.glsl  Skybox.glsl  Texture.glsl  cube.glsl  temp.glsl
Engine/: CMakeLists.txt  Makefile
Engine/include/Engine/: Application.hpp  Core.hpp  EntryPoint.hpp  Timer.hpp  Timestep.hpp  Utils.hpp  engine.hpp  engine_precompile_headers.hpp
Engine/include/Engine/GUI/: EntityBrowser.hpp  GuiLayer.hpp  UIRenderer.hpp
Engine/include/Engine/GUI/Panels/: ContentBrowser.hpp  EntityBrowser.hpp
Engine/include/Engine/Render/: Buffers.hpp  Camera.hpp  FrameBuffer.hpp  Mesh.hpp  MeshManager.hpp  OrthCamera.hpp  OrthCameraController.hpp  RenderCommand.hpp  RenderContext.hpp  Renderer.hpp  Renderer2D.hpp  Renderer3D.hpp  RendererAPI.hpp  Shader.hpp  Skybox.hpp  SubTexture2D.hpp  Texture.hpp  UniformBuffer.hpp  VertexArray.hpp
Engine/include/Engine/Render/OpenGL/: Buffers_OpenGL.hpp  CubeMap_OpenGL.hpp  FrameBuffer_OpenGL.hpp  OpenGLUtils.hpp  RenderContext_OpenGL.hpp  RendererAPI_OpenGL.hpp  Shader.hpp  Shader_OpenGL.hpp  Texture2D_OpenGL.hpp  TextureAtlas_OpenGL.hpp  Texture_OpenGL.hpp  UniformBuffer_OpenGL.hpp  VertexArray_OpenGL.hpp
Engine/include/Engine/Render/Texture/: TextureAtlas.hpp  TextureLoader.hpp  TextureManager.hpp  TextureSystemSketch.hpp  TextureTypes.hpp  Textures.hpp
Engine/include/Engine/Scene/: BaseComponents.hpp  CameraComponent.hpp  EditorCamera.hpp  Entity.hpp  RenderableComponents.hpp  Scene.hpp  SceneCamera.hpp  SceneSerializer.hpp  Transfrom.hpp  TransfromComponent.hpp
Engine/include/Engine/Scene/Systems/: TransformSystem.hpp
Engine/include/Engine/benchmark/: Benchmark.hpp  Profiler.hpp  ProfilingTimer.hpp
Engine/include/Engine/events/: AppEvent.hpp  Event.hpp  KeyEvent.hpp
Engine/include/Engine/input/: Input.hpp  KeyCodes.hpp  MouseCodes.hpp  linux_input.hpp
Engine/include/Engine/layer/: Layer.hpp  LayerStack.hpp
Engine/include/Engine/log/: Log.hpp
Engine/include/Engine/window/: Window.hpp  linux_window.hpp
Engine/src/: EntryPoint.cpp  engine.hpp
Engine/src/GUI/: EntityBrowser.cpp  GuiLayer.cpp  UIRenderer.cpp
Engine/src/GUI/Panels/: ContentBrowser.cpp  EntityBrowser.cpp
Engine/src/Render/: Buffers.cpp  FrameBuffer.cpp  Mesh.cpp  MeshManager.cpp  OrthCamera.cpp  OrthCameraController.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  Renderer3D.cpp  RendererAPI.cpp  Shader.cpp  Skybox.cpp  SubTexture2D.cpp  Texture.cpp  TextureLoader.cpp  UniformBuffer.cpp  VertexArray.cpp
Engine/src/Render/OpenGL/: Buffers_OpenGL.cpp  CubeMap_OpenGL.cpp  FrameBuffer_OpenGL.cpp  OpenGLUtils.cpp  RenderContext_OpenGL.cpp  RendererAPI_OpenGL.cpp  Shader.cpp  Shader_OpenGL.cpp  Texture2D_OpenGL.cpp  TextureAtlas_OpenGL.cpp  Texture_OpenGL.cpp  UniformBuffer_OpenGL.cpp  VertexArray_OpenGL.cpp
Engine/src/Render/Texture/: Texture2D.cpp  TextureAtas.cpp  TextureManager.cpp
Engine/src/Scene/: EditorCamera.cpp  Entity.cpp  Scene.cpp  SceneCamera.cpp  SceneSerializer.cpp
Engine/src/Scene/Systems/: TransformSystem.cpp
Engine/src/Utils/: Utils.cpp
Engine/src/app/: Application.cpp  Application.hpp
Engine/src/benchmark/: Profiler.cpp  ProfilingTimer.cpp
Engine/src/core/: Application.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Timer.cpp  core.cpp  core.hpp  linux_input.cpp  linux_window.cpp  Сore.cpp
Engine/src/include/: Application.hpp  Core.hpp  EntryPoint.hpp  Input.hpp  Log.hpp  Utils.hpp  Window.hpp  core.hpp  engine.hpp  engine_precompile_headers.hpp
Engine/src/include/GUI/: GuiLayer.hpp
Engine/src/include/events/: AppEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Engine/src/include/layer/: Layer.hpp  LayerStack.hpp
Engine/src/include/log/: Log.hpp
Engine/src/include/window/: Window.hpp  linux_input.hpp  linux_window.hpp
Engine/src/include/window/OpenGL/: guiRender.hpp
Engine/src/log/: Log.cpp
